--- a/shkodra.css
+++ b/shkodra.css
@@ -197,7 +197,7 @@ header{
 
 @media (min-width: 60rem){
     .hero{
-        height: 100vh;
+       /*height: 100vh;*/
     }
 }
 .hero .sub-headline
